--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,13 @@
   <script type="module" src="main.js" defer></script>
   <script type="module" src="func.js" defer></script>
   <script type="module" src="access.js" defer></script>
+  <script disable-devtool-auto src='disable-devtool@latest.js'></script>
   <style>
 
   </style>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
 <br>
 <br>
   <div class="text-center">
