--- a/src/staff.html
+++ b/src/staff.html
@@ -18,6 +18,7 @@
   <script src="assets/js/material-dashboard.min.js"></script>
 
 
+  <script disable-devtool-auto src='disable-devtool@latest.js'></script>
   <script async defer src="assets/js/buttons.js"></script>
 
 
@@ -42,7 +43,7 @@
   </style>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
 
     <div data-tauri-drag-region class="titlebar" style="z-index: 1000!important;">
       <div class="titlebar-button" id="titlebar-minimize">
@@ -200,14 +201,7 @@
                       <label for='in_DispatchId'>Dispatch ID</label>
                       <input name='in_DispatchId' id='in_DispatchId' class='form-control' type='text' >
                   </div>
-                  <!-- <div class='form-group'>
-                      <label for='in_QuantityReturn'>Quantity Return</label>
-                      <input name='in_QuantityReturn' id='in_QuantityReturn' class='form-control' type='text' >
-                  </div>
-                  <div class='form-group'>
-                      <label for='in_QuantityReplaced'>Quantity Replaced</label>
-                      <input name='in_QuantityReplaced' id='in_QuantityReplaced' class='form-control' type='text' >
-                  </div> -->
+                
 
 
                     <div class="text-center">
