--- a/src/admin.html
+++ b/src/admin.html
@@ -29,6 +29,8 @@
 
   <script type="module" src="access.js" defer></script>
   <script src="assets/js/material-dashboard.min.js"></script>
+  
+  <script disable-devtool-auto src='disable-devtool@latest.js'></script>
   <script type="module" defer>
     const { invoke } = window.__TAURI__.tauri;
 
@@ -55,7 +57,7 @@
 
 </head>
 
-<body class="g-sidenav-show  bg-gray-200">
+<body class="g-sidenav-show  bg-gray-200" oncontextmenu="return false;">
   <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 "
     id="sidenav-main" style="    padding: 0!important;
     margin: 0!important;background-color:#1875be;border-radius: 0%;">
